almost done, going home now

--- a/pr2-sol/documents/itads-bibliography.bib
+++ b/pr2-sol/documents/itads-bibliography.bib
@@ -14,6 +14,14 @@
   howpublished = {\url{http://en.wikipedia.org/wiki/Needleman-Wunsch_algorithm}}
 }
 
+@misc{wikipedia:smith-waterman,
+  author = {Wikipedia},
+  title =  {Smith-Waterman algorithm},
+  year =   2012,
+  month =  oct,
+  howpublished = {\url{http://en.wikipedia.org/wiki/Smith-Waterman_algorithm}}
+}
+
 @misc{gnuplot,
   author = {Thomas Williams and Colin Kelley and many others},
   title =  {Gnuplot},
