--- a/exams/2012-10-30/itads-exam-2012-10-30.tex
+++ b/exams/2012-10-30/itads-exam-2012-10-30.tex
@@ -228,7 +228,39 @@ Below that is a sketch of a \emph{multilist} which should be used to store these
 
 \question{4 points}
 
+\begin{enumerate}
 
+\item
+  \ldots
+
+\item
+  \ldots
+
+\item
+  The time it takes to run \texttt{function\_one} in the fragment below for $N=273654$ is $T_1(N) = 35762$.
+  Based on a big-Oh complexity analysis, how much time will it take for $N'=83764$?
+  You can assume that the various \texttt{slow\_X} functions take significantly longer to execute than any of the other instructions in the code.
+  
+  \begin{center}
+    \fbox{%
+      \begin{minipage}{0.6\columnwidth}
+        \small
+        \verbatimtabinput{q3a.txt}
+    \end{minipage}}
+  \end{center}
+  
+\item
+
+  
+  \begin{center}
+    \fbox{%
+      \begin{minipage}{0.6\columnwidth}
+        \small
+        \verbatimtabinput{q3b.txt}
+    \end{minipage}}
+  \end{center}
+  
+\end{enumerate}
 
 
 \clearpage
