--- a/exams/2012-10-30/itads-exam-2012-10-30.tex
+++ b/exams/2012-10-30/itads-exam-2012-10-30.tex
@@ -107,7 +107,7 @@ Each implementation is for a different type of data structure.
     and write down the name of the data structure.
   \end{itemize}
 \item
-  For each of these data structures, write code that iterates over all the items and prints their value.
+  For each of these data structures, \textbf{write code that iterates over all the items} and prints their value.
   You can use pseudo-code or C code, or plain English.
 \end{enumerate}
 
@@ -188,41 +188,65 @@ Each implementation is for a different type of data structure.
     \verbatimtabinput{clist-insert.txt}
 \end{minipage}}
 
+\vfill
+\textbf{\emph{Notice: don't forget to answer question 1.2 (see previous page).}}
+
 
 \clearpage
 
 \question{4 points}
 
-In a \emph{multilist}, items have multiple link fields and belong to independently maintained linked lists.
-For example, we can store planar points sorted along the X and the Y coordinate at the same time.
-The two linked lists rely on two link fields, in this case one for the next item along X, and one for the next item along Y.
-We also need to maintain two separate heads, because the start of the list that is sorted along X will usually be different from the start of the list that is sorted along Y.
+In a \emph{multilist}, items have multiple link fields and belong to more than one list simultaneously.
+For example, points can be stored such their order along X and Y is maintained independently.
+In this case, there is one link field (pointer) for the next item along X, and one for the next item along Y.
+There also are two separate heads, because the start of the list that is sorted along X will usually be different from the start of the list that is sorted along Y.
 
-The diagram shows five planar points labeled \textbf{A}, \textbf{B}, \textbf{C}, \textbf{D}, and \textbf{E}, each with different X and Y coordinates.
-Below that is a sketch of a \emph{multilist} which should be used to store these points such that:
-
-\begin{itemize}
-\item
-  We can traverse the list of points by order of increasing X coordinate by starting at \texttt{xhead} and repeatedly following the \texttt{xnext} link.
-\item
-  And for visiting the points in order of increasing Y coordinate, we start at \texttt{yhead} and follow the \texttt{ynext} links.
-\end{itemize}
+The diagram below shows five points labeled \textbf{A}, \textbf{B}, \textbf{C}, \textbf{D}, and \textbf{E}.
+Each has different X and Y coordinates, written in parenthesis after the label.
 
 \vfill
 
-\includegraphics[width=\columnwidth]{q2.pdf}
+\noindent
+\begin{center}
+  \includegraphics[width=0.4\columnwidth]{q2a.pdf}
+\end{center}
 
 \vfill
 
 \begin{enumerate}
 \item
-  For each of the \texttt{Point} boxes above, fill in the point label (A, B, C, D, E) and the coordinates, then draw arrows from the \texttt{xnext} fields to an appropriate \texttt{Point} box, such that the resulting linked list is sorted along X (from lowest to highest) and contains all the points A, B, C, D, and E.
-  Don't forget to draw an arrow from the \texttt{xhead} box.
-  Then, do the same for the Y coordinate, on top of the same diagram.
+  At the bottom of this page is an incomplete diagram for a \emph{multilist} as described above.
+  
+  Your task is to fill in and connect the \texttt{Point} boxes:
+  write one of the labels (A, B, C, D, and E) into each box, and draw arrows from the \texttt{xnext} fields.
+  The resulting linked list must be ordered along X (from lowest to highest X coordinate) and contains all the points A, B, C, D, and E.
+  Also draw an arrow from \texttt{xhead} to the appropriate start box.
+  
+  Then, do the same for the Y coordinate, by adding arrows for the \texttt{ynext} and \texttt{yhead} pointers.
+  
+  Verify your work by checking that:
+  \begin{itemize}
+  \item
+    When you start at \texttt{xhead} and repeatedly follow the \texttt{xnext} link, you visit all points by increasing X coordinate.
+  \item
+    Likewise, when you start at \texttt{yhead} and follow the \texttt{ynext} links, the points are visited by increasing Y coordinate.
+  \end{itemize}
+  
 \item
-  Write down the procedure to insert a point, given by its X and Y coordinates, into such a multilist.
-  You have to provide a declaration for the data structure that you are using, and don't forget to handle the case when the list is empty.
+  Write a procedure to insert a point into such a multilist.
+  Points are specified using their X and Y coordinates.
+  You have to provide a declaration for the data structure along with your procedure.
+  Take care to properly handle the initial case of inserting into an empty list.
 \end{enumerate}
+
+\vfill
+
+\noindent
+\begin{center}
+  \includegraphics[width=\columnwidth]{q2b.pdf}
+\end{center}
+
+
 
 \clearpage
 
