--- a/exams/2012-10-30/itads-exam-2012-10-30.tex
+++ b/exams/2012-10-30/itads-exam-2012-10-30.tex
@@ -363,6 +363,35 @@ You are asked to align the sequences ``violet-blue-red'' (VBR) and ``yellow-oran
 
 \question{4 points}
 
+\begin{enumerate}
+  
+\item
+  There is a bug in the following implementation of insertion sort.
+  For example, if it is given an array that contains the numbers $\{ 6, 0, 7, 3, 8, 5, 1, 4, 9, 2 \}$, it will produce the incorrect $\{ 6, 6, 7, 7, 8, 8, 8, 8, 9, 9 \}$.
+  What is wrong, and how can it be fixed?
+  
+  \begin{center}
+    \fbox{%
+      \begin{minipage}{0.7\columnwidth}
+        \small
+        \verbatimtabinput{isort-buggy.txt}
+    \end{minipage}}
+  \end{center}
+  
+\item
+  For removing the topmost item of a min-heap, we overwrite \texttt{array[1]} with the last item, shrink the array, and then call \texttt{bubble\_down} in order to restore the min-heap property.
+  However, the following implementation of bubble-down contains a mistake.
+  For example, after successfully inserting the numbers $\{ 1, 2, 3, 1, 2, 5, 4, 3 \}$ onto the heap, the produced incorrect order of removal is $\{ 1, 3, 4, 5, 2, 2, 3, 1 \}$.
+  What is wrong, and how can it be fixed?
+  
+  \begin{center}
+    \fbox{%
+      \begin{minipage}{0.7\columnwidth}
+        \small
+        \verbatimtabinput{bdown-buggy.txt}
+    \end{minipage}}
+  \end{center}
 
+\end{enumerate}
 
 \end{document}
